# HomeWork19.3

./: data.json  pyproject.toml
config/: settings.py  urls.py
shop/: admin.py  models.py
shop/management/commands/: fill.py
shop/migrations/: 0001_initial.py  0002_alter_product_creation_date_and_more.py  0002_category_created_at.py  0003_alter_product_category_name.py
